--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         <div id="w-node-cbc48001-f82b-591d-c251-d9d4f80a0ce1-22c4fdbb"
                             class="container-left-colum-about_section">
                             <p class="title-section-large black text-split scrub-each-word">&quot;
-                                I'm a passionate web designer and developer dedicated to helping creatives, non profit
+                                I'm a passionate web designer and developer, <span class="certified"> certified webflow expert</span><img class="hide" src="img/certificate.png" alt="webflow certification" /> dedicated to helping creatives, non profit
                                 organization, game changers, and small business owners bring their vision to life
                                 online. Whether
                                 you're an artist looking to showcase your portfolfio, a non profit seeking to raise
@@ -319,7 +319,7 @@
                                 I am here to create a unique and affordables websites that you'll help you stand out. I
                                 believe in the power of collaboration and open communication. I make sure that every
                                 feature
-                                of the website fits with your objectives and sources of inspiration.
+                                of the website fits with your objectives and sources of inspiration. 
                                 <br />‍<br />To help take into account the carbon footprint of a website, a
                                 tree is planted for every website designed or developed. &quot;<br />
                                 <div id="wcb" class="carbonbadge wcb-d"></div>
