--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
 
-    <link href="img/favicon.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="img/favicon.png" rel="apple-touch-icon" />
+    <link href="img/favicon.png" loading="lazy"  rel="shortcut icon" type="image/x-icon" />
+    <link href="img/favicon.png" loading="lazy"  rel="apple-touch-icon" />
     <meta name="p:domain_verify" content="c3ca5ff23c96efc9a218c1e8414d434c"/>
 
 </head>
@@ -123,7 +123,7 @@
               
 
                 <a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" data-w-id="49effe88-a9e1-de34-7d32-bb025787cbd4" style="opacity:0"
-                    class="home-contact-button w-inline-block" aria-label="link to contact Cali creative studio">  <img id="IconContact" src="img/comments-regular.svg" alt="icon contact"/></a>
+                    class="home-contact-button w-inline-block" aria-label="link to contact Cali creative studio">  <img id="IconContact" src="img/comments-regular.svg" loading="lazy"  alt="icon contact"/></a>
                 </svg>
 
             </div>
@@ -240,7 +240,7 @@
                                 alt="a person designing frameworks on a tablet" class="img_accordion" />
                             <h4 class="accordion-title-container slide_up_serv">Web Design</h4>
                             <div class="arrow">
-                                <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" alt="icon chevron down" />
+                                <img class="ArrowAccordion enlarged" src="img/chevron-down-solid.svg" loading="lazy"  alt="icon chevron down" />
                             </div>
 
                         </div>
@@ -426,7 +426,7 @@
                   <div class="Wrapper_container_blog">
                         <div class="BlogSection">
                         <div class="swiper-slide enlarged"><a href="https://youtube.com/shorts/O6KGLE2Cqyo?feature=share" target="_blank" aria-label="link to the tutorial how to create a infinite carousel in webflow" />
-                            <img src="img/cmsCollectionTiny.png" alt="thumbnail of the youtube tutorial on how to create a CMS collection in webflow"/></a>
+                            <img src="img/cmsCollectionTiny.png" loading="lazy"  alt="thumbnail of the youtube tutorial on how to create a CMS collection in webflow"/></a>
                             <div class="subtitle">
                             Watch the video
                             </div>
@@ -434,7 +434,7 @@
                     </div>
                     <div class="BlogSection">
                         <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=rGERIz_R6gI" target="_blank">
-                            <img src="img/stackingcards.png" alt="thumbnail of the youtube tutorial on how to create a stacking cards effect in webflow" /></a>
+                            <img src="img/stackingcards.png" loading="lazy" alt="thumbnail of the youtube tutorial on how to create a stacking cards effect in webflow" /></a>
                             <div class="subtitle">
                             Watch the video
                             </div>
@@ -442,7 +442,7 @@
                     </div>   
                     <div class="BlogSection">
                         <div class="swiper-slide"><a href="https://youtube.com/shorts/OBYc8aqYjcc?feature=share" target="_blank" aria-label="link to the tutorial on how to create rotation of a button in webflow ">
-                            <img src="img/rotationtuto.png" alt="thumbnail of the youtube tutorial on how to spin your badges like a pro in webflow" /></a>
+                            <img src="img/rotationtuto.png" loading="lazy" alt="thumbnail of the youtube tutorial on how to spin your badges like a pro in webflow" /></a>
                             <div class="subtitle">
                                 Watch the video
                             </div>
@@ -450,7 +450,7 @@
                     </div>    
                     <div class="BlogSection">
                         <div class="swiper-slide"><a href="https://www.youtube.com/watch?v=XhkR50rrE2I" target="_blank" aria-label="link to the tutorial on how to create a CMS Collection in webflow ">
-                            <img src="img/carouselinifintetuto.png" alt="thumbnail of the youtube tutorial on how to create an infinite carousel in webflow" /></a>
+                            <img src="img/carouselinifintetuto.png" loading="lazy" alt="thumbnail of the youtube tutorial on how to create an infinite carousel in webflow" /></a>
                             <div class="subtitle">
                                 Watch the video
                             </div>
