--- a/index.html
+++ b/index.html
@@ -162,10 +162,12 @@
 
                         <div class="line_header hero_tsext1">
                             <h1 class="heading-39 header-splitting_line1 headingHero"><span class="heroSubtitle">Hello
-                                    and welcome ! My name is Lila. I build creative and unique websites
+                                    and welcome ! My name is Lila. I build creative, and modern websites
                                     to help artists, creatives, non-profit and businesses who are trying to make a
-                                    difference stands out.</p>
+                                    difference stands out. Having a website doesn't have to be complicated, or expensive. Let me help you.</p>
                             </h1>
+                             <a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" data-w-id="49effe88-a9e1-de34-7d32-bb025787cbd4" style="opacity:0"
+                            class="home-contact-button w-inline-block" aria-label="link to contact Cali creative studio">Let's talk </a>
                         </div>
                     </div>
                 </div>
@@ -557,8 +559,8 @@
             <footer class="fn-footer-first wf-section">
                 <div class="home-contact-grid-container ">
                     <div id="contact" class="contact_row is_1">
-                         <h3 class="title-section-large footer-splitting"><a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" aria-label="link to contact Cali creative studio" >Interested in working together ?<br />
-                            contact@studiocali.com</a></h3>
+                         <h3 class="title-section-large footer-splitting"><a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" aria-label="link to contact Cali creative studio" >Interested in working together ?<br /> I'd be happy to learn about your project.
+                            contact@studiocali.com I'll reply within 48 hours.</a></h3>
                     </div>
                 </div><a href="#hero" data-w-id="62504f25-d25f-6aed-2081-791f73fac734" style="display:none"
                     class="button-top-page w-inline-block">top page</a>
