--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <h1 class="heading-39 header-splitting_line1 headingHero"><span class="heroSubtitle">Hello
                                     and welcome ! My name is Lila. I build creative, and modern websites
                                     to help artists, creatives, non-profit and businesses who are trying to make a
-                                    difference stands out. Having a website doesn't have to be complicated, or expensive. Let me help you.</p>
+                                    difference stands out. 
                             </h1>
                              <a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" data-w-id="49effe88-a9e1-de34-7d32-bb025787cbd4" style="opacity:0"
                             class="home-contact-button w-inline-block" aria-label="link to contact Cali creative studio">Let's talk </a>
@@ -205,7 +205,7 @@
                                 <h4 class="h3 text-first-row slide_up_portf">Wordpress development + content writing
                                 </h4>
                                 <h3 class="text-seond-row slide_up_portf">Innovation &amp; Research</h3>
-                                <p class="small-text-muted-90 slide_up_portf">Website for a research public entity</p>
+                                <p class="small-text-muted-90 slide_up_portf">Website for a research public entity (43 pages)</p>
                             </div>
                         </div>
                         <div id="w-node-_8cb99d98-2256-c7ea-8775-2270888ce5de-22c4fdbb"
@@ -313,17 +313,9 @@
                         <div id="w-node-cbc48001-f82b-591d-c251-d9d4f80a0ce1-22c4fdbb"
                             class="container-left-colum-about_section">
                             <p class="title-section-large black text-split scrub-each-word">&quot;
-                                I'm a passionate web designer and developer, <span class="certified"> certified webflow expert</span><img class="hide" src="img/certificate.png" alt="webflow certification" /> dedicated to helping creatives, non profit
-                                organization, game changers, and small business owners bring their vision to life
-                                online. Whether
-                                you're an artist looking to showcase your portfolfio, a non profit seeking to raise
-                                awarness for a cause or an entrepreneur wishing to launch an e-commerce,
-                                I am here to create a unique and affordables websites that you'll help you stand out. I
-                                believe in the power of collaboration and open communication. I make sure that every
-                                feature
-                                of the website fits with your objectives and sources of inspiration. 
-                                <br />‍<br />To help take into account the carbon footprint of a website, a
-                                tree is planted for every website designed or developed. &quot;<br />
+                                Creating a website can be a daunting undertaking, especially with so many options available on the internet (wordpress, squarespace, webflow, wix, etc.). It can be challenging to choose the best one for your activities. Then you'll have to worry about the design, SEO, loading speed, and so on. This can easily consume a significant amount of your time. My purpose is to assist with all of these tasks. I'm a dedicated web designer with experience in html, CSS, and javascript, as well as a certified Webflow specialist. I'm committed to assisting creatives, non-profit organizations, game changers, and small business owners in realizing their visions online.
+                               So, whether you're an artist seeking to showcase your portfolio, a non-profit looking to raise awareness for a cause, or an entrepreneur looking to launch an e-commerce, I'm here to help you stand out. I believe in the power of open communication and collaboration. I ensure that every aspect of the website corresponds to your goals and inspiration. 
+                                <br />‍<br />I also make every effort to create sustainable web design. To help with the carbon impact of a website, a tree is planted for every website designed or developed.<br />
                                 <div id="wcb" class="carbonbadge wcb-d"></div>
 <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
                             </p>
