--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@
         },
             {
                 opacity: 1,
-                stagger: 0.03,
+                stagger: 0.1,
             });
 
 
@@ -1131,7 +1131,7 @@
                 });
         });
         $(".slide_up_serv").each(function (index) {
-            let triggerElement = $(".section-home-services1");
+            let triggerElement = $(".section-home-services");
            
 
             let tl_slide = gsap.timeline({
