--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
                                 <div class="ham enlarged">
                                     <span>Menu</span>
                                 </div>
+                                <div class="ham enlarged">
+                                    <span><a href="HomeFrench.html" aria-label="lien vers la page en français">Vous parlez français ?</span>
+                                </div>
 
                             </div>
                         </div>
@@ -313,9 +316,17 @@
                         <div id="w-node-cbc48001-f82b-591d-c251-d9d4f80a0ce1-22c4fdbb"
                             class="container-left-colum-about_section">
                             <p class="title-section-large black text-split scrub-each-word">&quot;
-                                Creating a website can be a daunting undertaking, especially with so many options available on the internet (wordpress, squarespace, webflow, wix, etc.). It can be challenging to choose the best one for your activities. Then you'll have to worry about the design, SEO, loading speed, and so on. This can easily consume a significant amount of your time. My purpose is to assist with all of these tasks. I'm a dedicated web designer with experience in html, CSS, and javascript, as well as a certified Webflow specialist. I'm committed to assisting creatives, non-profit organizations, game changers, and small business owners in realizing their visions online.
-                               So, whether you're an artist seeking to showcase your portfolio, a non-profit looking to raise awareness for a cause, or an entrepreneur looking to launch an e-commerce, I'm here to help you stand out. I believe in the power of open communication and collaboration. I ensure that every aspect of the website corresponds to your goals and inspiration. 
-                                <br />‍<br />I also make every effort to create sustainable web design. To help with the carbon impact of a website, a tree is planted for every website designed or developed.<br />
+                                 Creating a website can be a daunting undertaking, especially with so many options 
+                                available today (wordpress, squarespace, webflow, wix, etc.). It can be challenging 
+                                to choose the best one for your activities. Then you'll have to worry about the design, 
+                                SEO, loading speed, and so on. This can easily consume a significant amount of your time. 
+                                My purpose is to assist with all of these tasks. As a web designer certified webflow with 
+                                experience in html, CSS, and js, my mission is to assist creatives, non-profit organizations, 
+                                game changers, and small business owners in realizing their visions online. So, whether you're
+                                an artist seeking to showcase your portfolio, a non-profit looking to raise awareness for a 
+                                cause, or an entrepreneur looking to launch an e-commerce, I'm here to help you. 
+                                I believe in the power of communication and collaboration. I ensure that every aspect0
+                                of the website corresponds to your goals and inspiration. <br />‍<br />I also make every effort to create sustainable web design. To help with the carbon impact of a website, a tree is planted for every website designed or developed.<br />
                                 <div id="wcb" class="carbonbadge wcb-d"></div>
 <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
                             </p>
@@ -553,7 +564,7 @@
                                                             is a goal in and of itself.<br />However, web design is more
                                                             than that; it is also about creating simple, accessible, and
                                                             intuitive websites. Your website&#x27;s animation, and
-                                                            interactions improves the user experience, keeps them
+                                                            interactions improve the user experience, keeps them
                                                             interested, help you stand out, and get your message across.
                                                         </p>
                                                     </div>
@@ -736,7 +747,7 @@
         const fade = document.querySelector(".js-fade");
         const caption = document.querySelector(".js-text");
         const colors = ["#E85627", "#6C7177", "#2E4E37", "#161513"];
-        const captions = ["Creative", "Affordable", "Ethical"];
+        const captions = ["Creative", "Affordable", "Eco-friendly"];
         const tl = gsap.timeline({
 
         });
