--- a/HomeFrench.html
+++ b/HomeFrench.html
@@ -13,13 +13,10 @@
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link href="/style.css" rel="stylesheet" type="text/css" /><link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Playfair Display" rel="stylesheet">
       <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
