--- a/HomeFrench.html
+++ b/HomeFrench.html
@@ -114,11 +114,11 @@
             <!-- <div class="bar_scrolling">
                 <div class="bar_scroll-inside"></div>
             </div> -->
-            <div class="btnContact">
+        <div class="btnContact FullSize">
               
 
                 <a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" data-w-id="49effe88-a9e1-de34-7d32-bb025787cbd4" style="opacity:0"
-                    class="home-contact-button w-inline-block" aria-label="lien pour contacter Cali creative studio">  <img id="IconContact" src="img/comments-regular.svg" loading="lazy"  alt="icon contact"/></a>
+                    class="home-contact-button w-inline-block">  <img  src="img/Badge2GITFrench.png" /></a>
                 </svg>
 
             </div>
