--- a/HomeFrench.html
+++ b/HomeFrench.html
@@ -145,6 +145,9 @@
                                 <div class="ham enlarged">
                                     <span>Menu</span>
                                 </div>
+                                 <div class="ham enlarged">
+                                    <span><a href="HomeFrench.html" aria-label="lien vers la page en français">Vous parlez français ?</span>
+                                </div>
 
                             </div>
                         </div>
