--- a/HomeFrench.html
+++ b/HomeFrench.html
@@ -118,7 +118,7 @@
               
 
                 <a href="mailto:cali.studioCrea.com?subject=Mail from Our Site" data-w-id="49effe88-a9e1-de34-7d32-bb025787cbd4" style="opacity:0"
-                    class="home-contact-button w-inline-block">  <img  src="img/Badge2GITFrench.png" /></a>
+                    class="home-contact-button w-inline-block">  <img  src="img/BadgeGitFrench.png" /></a>
                 </svg>
 
             </div>
