--- a/Fr.html
+++ b/Fr.html
@@ -146,7 +146,7 @@
                                     <span>Menu</span>
                                 </div>
                                  <div class="ham enlarged">
-                                    <span><a href="HomeFrench.html" aria-label="lien vers la page en français">Vous parlez français ?</span>
+                                    <span><a href="index.html" aria-label="lien vers la page en anglais">Speak English ?</span>
                                 </div>
 
                             </div>
