--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         websites. We specialize in crafting creatives and unique website for artists, non-profits, creatives and businesses
         who want to make a difference. Work with me to bring your online vision to life">
     <link href="style.css" rel="stylesheet" type="text/css" />
-   
+   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Playfair Display" rel="stylesheet">
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
     
