--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                     <span>Menu</span>
                                 </div>
                                 <div class="ham enlarged">
-                                    <span><a href="HomeFrench.html" aria-label="lien vers la page en français">Vous parlez français ?</span>
+                                    <span><a href="Accueil.html" aria-label="lien vers la page en français">Vous parlez français ?</span>
                                 </div>
 
                             </div>
