--- a/index.html
+++ b/index.html
@@ -324,17 +324,14 @@
                         <div id="w-node-cbc48001-f82b-591d-c251-d9d4f80a0ce1-22c4fdbb"
                             class="container-left-colum-about_section">
                             <p class="title-section-large black text-split scrub-each-word">&quot;
-                                 Creating a website can be a daunting undertaking, especially with so many options 
-                                available today (wordpress, squarespace, webflow, wix, etc.). It can be challenging 
+                                 Creating a website can be overwhelming, especially  with numerous options like wordpress, squarespace, webflow, wix, etc.. It can be challenging 
                                 to choose the best one for your activities. Then you'll have to worry about the design, 
                                 SEO, loading speed, and so on. This can easily consume a significant amount of your time. 
-                                My purpose is to assist with all of these tasks. As a web designer certified webflow with 
-                                experience in html, CSS, and js, my mission is to assist creatives, non-profit organizations, 
-                                game changers, and small business owners in realizing their visions online. So, whether you're
-                                an artist seeking to showcase your portfolio, a non-profit looking to raise awareness for a 
-                                cause, or an entrepreneur looking to launch an e-commerce, I'm here to help you. 
-                                I believe in the power of communication and collaboration. I ensure that every aspect0
-                                of the website corresponds to your goals and inspiration. <br />‍<br />I also make every effort to create sustainable web design. To help with the carbon impact of a website, a tree is planted for every website designed or developed.<br />
+                                My purpose is to assist with all of these tasks. As a web designer, webflow certified, with experience in HTML, CSS, and JavaScript, 
+                                I assist creatives, non-profit organizations, and small business owners in realizing their visions online.
+                                My mission is to ensure that every aspect of the website corresponds to your goals and inspiration.
+                                I believe in the power of communication and collaboration to create a successful website. <br />‍<br />
+                                I also make every effort to create sustainable web design. A tree is planted for every website designed or developed.<br />
                                 <div id="wcb" class="carbonbadge wcb-d"></div>
 <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
                             </p>
