--- a/Accueil.html
+++ b/Accueil.html
@@ -305,15 +305,12 @@
                                 surtout avec les nombreuses options disponibles aujourd'hui (wordpress, squarespace, webflow, wix, etc.). 
                                 Il peut être difficile de choisir celui qui convient le mieux à vos activités. 
                                 Une fois ce choix fait, vous devez ensuite vous préoccuper de la conception, 
-                                du référencement, de la vitesse de chargement de votre site, etc. Cela peut facilement prendre 
-                                une grande partie de votre temps. Mon but est de vous aider dans toutes ces tâches. 
-                                En tant que designer web, certifié Webflow et avec de l'expérience en html, CSS, et 
-                                javascript, j'aide les créatifs, les organisations à but non lucratif, 
-                                et les entreprises à avoir un site à leur image. 
+                                du référencement, de la vitesse de chargement, etc. Cela peut facilement prendre 
+                                une grande partie de votre temps. 
                                 Que vous soyez un artiste cherchant à présenter votre portfolio, une association cherchant à sensibiliser le public à une cause, 
-                                ou un entrepreneur cherchant à lancer un commerce électronique, 
-                                je suis là pour vous aider dans toutes les étapes de votre projet web.
-                                Je m'assure que chaque aspect du site web correspond à vos objectifs et à vos inspirations.<br/>
+                                ou un entrepreneur cherchant à lancer un commerce électronique, mon but est de vous aider dans toutes les étapes de votre projet web. 
+                                
+                                <br/>
                                  Je m'efforce également de créer des sites eco-responsable. 
                                  Pour aider à réduire l'impact carbone, un arbre est planté pour chaque 
                                  site web conçu ou développé.
