--- a/Accueil.html
+++ b/Accueil.html
@@ -315,8 +315,8 @@
                                  site web conçu ou développé.
 
                               
-                                <div id="wcb" class="carbonbadge"></div>
-                                <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
+                               < div id="wcb" class="carbonbadge wcb-d"></div>
+<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
                             </p>
                             <div id="About" class="home-about-title-wrapper"></div>
                         </div>
