--- a/Accueil.html
+++ b/Accueil.html
@@ -908,16 +908,6 @@
     });
 
 
-
-
-
-
-
-
-
-   
-
-
     const targetfooter = document.querySelector(".footer-splitting");
     const myText2 = new SplitType(targetfooter);
 
@@ -1035,7 +1025,7 @@
             
         },
             {
-                rotation:390, duration:10
+                rotation:'+=360', duration:10
                
             });
     const tlAbout = gsap.timeline({
