--- a/Accueil.html
+++ b/Accueil.html
@@ -300,7 +300,7 @@
                     <div data-w-id="cbc48001-f82b-591d-c251-d9d4f80a0ce0" class="w-layout-grid home-about-component">
                         <div id="w-node-cbc48001-f82b-591d-c251-d9d4f80a0ce1-22c4fdbb"
                             class="container-left-colum-about_section">
-                            <p class="title-section-large black text-split scrub-each-word"> La création d'un site web peut être une tâche décourageante, 
+                            <div class="title-section-large black text-split scrub-each-word" > <p>La création d'un site web peut être une tâche décourageante, 
                                 surtout avec les nombreuses options disponibles aujourd'hui (wordpress, squarespace, webflow, wix, etc.). 
                                 Il peut être difficile de choisir celui qui convient le mieux à vos activités. 
                                 Une fois ce choix fait, vous devez ensuite vous préoccuper de la conception, 
@@ -312,12 +312,12 @@
                                 <br/>
                                  Je m'efforce également de créer des sites eco-responsable. 
                                  Pour aider à réduire l'impact carbone, un arbre est planté pour chaque 
-                                 site web conçu ou développé.
+                                 site web conçu ou développé.</p>
 
                               
                                < div id="wcb" class="carbonbadge wcb-d"></div>
 
-                            </p>
+                            </div>
                             <div id="About" class="home-about-title-wrapper"></div>
                         </div>
                     </div>
