--- a/Accueil.html
+++ b/Accueil.html
@@ -164,7 +164,7 @@
                     <div class="hero_text_wraper menu_wrapper">
 
                         <div class="line_header hero_tsext1">
-                            <h1 class="heading-39 header-splitting_line1 headingHero"><span class="heroSubtitle">Bonjour et bienvenue ! Je m'appelle Lisa. Je design
+                            <h1 class="heading-39 header-splitting_line1 headingHero"><span class="heroSubtitle">Bonjour et bienvenue ! Je m'appelle LiLa. Je design
                                 et développe des sites modernes, et créatifs pour aider les entreprises, 
                                 associations, artistes,et entrepreneurs à développer une présence en ligne à leur image.
                             </p>
