--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                                 My purpose is to assist with all of these tasks. As a web designer, webflow certified, with experience in HTML, CSS, and JavaScript, 
                                 I assist creatives, non-profit organizations, and small business owners in realizing their visions online.
                                 My mission is to ensure that every aspect of the website corresponds to your goals and inspiration.
-                                I believe in the power of communication and collaboration to create a successful website. <br />‍<br />
+                                I believe in the power of communication and collaboration to create a successful website. <br />
                                 I also make every effort to create sustainable web design. A tree is planted for every website designed or developed.<br />
                                 <div id="wcb" class="carbonbadge wcb-d"></div>
 <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
