--- a/Accueil.html
+++ b/Accueil.html
@@ -27,7 +27,14 @@
     <meta name="p:domain_verify" content="c3ca5ff23c96efc9a218c1e8414d434c"/>
 
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MPSB1YTVS3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-MPSB1YTVS3');
+</script>
 <body class="body">
 
     <div class="loadingAnimation">
