--- a/Accueil.html
+++ b/Accueil.html
@@ -559,7 +559,7 @@
                                 href="#" class="fn-footer-legal-link">Terms &amp; Conditions</a></div>
                         <div class="footer-legal-links--wrapper right">
                             <div id="wcb" class="carbonbadge wcb-d"></div>
-                            <div class="fn-footer-copyright">Cali creative studio, 2022</div>
+                            <div class="fn-footer-copyright">Cali creative studio, Nantes-Rennes 2022</div>
                         </div>
                     </div>
                     </div>
