--- a/Accueil.html
+++ b/Accueil.html
@@ -179,8 +179,8 @@
                         <div class="line_header hero_tsext1">
                             <h1 class="heading-39 header-splitting_line1 headingHero"><span class="heroSubtitle">Bonjour et bienvenue ! Je m'appelle LiLa. Je design
                                 et développe des sites modernes, et créatifs pour aider les entreprises, 
-                                associations, artistes,et entrepreneurs à développer une présence en ligne à leur image.
-                            </p>
+                                associations, artistes,et entrepreneurs à développer une présence en ligne à leur image.</span>
+                         
                             </h1>
                         </div>
                     </div>
