--- a/index.html
+++ b/index.html
@@ -916,10 +916,10 @@
                 cursor.classList.remove("enlarged")
             });
         });
-     document.getElementById("language-toggle").addEventListener("click", myFunction);
+     document.getElementById("#language-toggle").addEventListener("click", myFunction);
 
 function myFunction() {
-  if (document.getElementById("language-toggle").checked) {
+  if (document.getElementById("#language-toggle").checked) {
     window.open("https://csc-creator.github.io/cali-studioCrea.github.io/Acceuil.html", "_blank");
   } else {
     window.open("https://csc-creator.github.io/cali-studioCrea.github.io", "_blank");
