--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                 <div class="toggleLanguage">
                                         <div class="switch">
                                             <input
-                                              
+                                              id="language-toggle"
                                               class="check-toggle check-toggle-round-flat"
                                               type="checkbox"
                                             />
