--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                            <div class="toggleLanguage">
                                       
                                             <span class="on">EN</span>
-                                            <span class="off enlarged"><a href="HomeFrench.html" target="_blank">FR</a></span>
+                                            <span class="off enlarged"><a href="https://csc-creator.github.io/cali-studioCrea.github.io/Accueil.html" target="_blank">FR</a></span>
                                           </div>
                                         
 
