--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         who want to make a difference. Work with me to bring your online vision to life">
     <link href="style.css" rel="stylesheet" type="text/css" />
 
-    
+    <meta name="p:domain_verify" content="c3ca5ff23c96efc9a218c1e8414d434c"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
     
