--- a/Accueil.html
+++ b/Accueil.html
@@ -5,11 +5,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Cali Creative Studio : Webflow Developper &amp; Web Designer</title>
-    <meta content="Cali Creative Studio : Webflow Developer &amp;  Web Designer"" name=" description" />
-    <meta content="Cali Creative Studio : Webflow Developer &amp;  Web Designer" property="og:title" />
-    <meta content="Cali Creative Studio : Webflow Developer &amp;  Web Designer"" property=" og:description" />
-    <meta content="Cali Creative Studio : Webflow Developer &amp;  Web Designer" property="twitter:title" />
-    <meta content="Cali Creative Studio : Webflow Developer &amp;  Web Designer" property="twitter:description" />
+    <meta content="Cali Creative Studio : Webflow Developpeur &amp;  Web Designer"" name=" description" />
+    <meta content="Cali Creative Studio : Webflow Developpeur &amp;  Web Designer" property="og:title" />
+    <meta content="Cali Creative Studio : Webflow Developpeur &amp;  Web Designer"" property=" og:description" />
+    <meta content="Cali Creative Studio : Webflow Developpeur &amp;  Web Designer" property="twitter:title" />
+    <meta content="Cali Creative Studio : Webflow Developpeur &amp;  Web Designer" property="twitter:description" />
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
