--- a/Accueil.html
+++ b/Accueil.html
@@ -22,8 +22,8 @@
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
 
-    <link href="img/favicon(4).jpg" rel="shortcut icon" type="image/x-icon" />
-    <link href="img/favicon(4).jpg" rel="apple-touch-icon" />
+    <link href="img/favicon(4).png" rel="shortcut icon" type="image/x-icon" />
+    <link href="img/favicon(4).png" rel="apple-touch-icon" />
     <meta name="p:domain_verify" content="c3ca5ff23c96efc9a218c1e8414d434c"/>
 
 </head>
