--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                 <h4 class="h3 text-first-row slide_up_portf">Wordpress development + content writing
                                 </h4>
                                 <h3 class="text-seond-row slide_up_portf">Innovation &amp; Research</h3>
-                                <p class="small-text-muted-90 slide_up_portf">Website for a research public entity (43 pages)</p>
+                                <p class="small-text-muted-90 slide_up_portf">Website for a research public entity </p>
                             </div>
                         </div>
                         <div id="w-node-_8cb99d98-2256-c7ea-8775-2270888ce5de-22c4fdbb"
