--- a/Accueil.html
+++ b/Accueil.html
@@ -222,7 +222,7 @@
                                 <h3 class="h3 text-first-row slide_up_portf">Développement Wordpress et rédaction de contenu
                                 </h3>
                                 <h3 class="text-seond-row slide_up_portf">Recherche et Innovation</h3>
-                                <p class="small-text-muted-90 slide_up_portf">Site internet pour un organisme de recherche public (43 pages)</p>
+                                <p class="small-text-muted-90 slide_up_portf">Site internet pour la recherche</p>
                             </div>
                         </div>
                         <div id="w-node-_8cb99d98-2256-c7ea-8775-2270888ce5de-22c4fdbb"
